--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "immer": "^9.0.15",
     "next": "12.3.1",
     "ramda": "^0.28.0",
     "react": "18.2.0",
