--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.3.1",
     "ramda": "^0.28.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.58.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.19.3",
