--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
+    "test:e2e": "cypress open",
+    "test:e2e:ci": "cypress run",
     "lint": "next lint"
   },
   "dependencies": {
@@ -24,6 +26,7 @@
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "cypress": "^12.6.0",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "jest": "^29.1.2",
