--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.1.2",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
@@ -29,7 +31,8 @@
     "cypress": "^12.6.0",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "jest": "^29.1.2",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "typescript": "4.8.4"
   }
 }
